css/main.css
/* ... */
::selection {
  background: #b3d4fc;
  text-shadow: none; }

/*
 * A better looking default horizontal rule
 */
hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0; }

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */
img {
  vertical-align: middle; }

/*
 * Remove default fieldset styles.
 */
fieldset {
  border: 0;
  margin: 0;
  padding: 0; }

/*
 * Allow only vertical resizing of textareas.
 */
textarea {
  resize: vertical; }

/* ==========================================================================
   Browse Happy prompt
   ========================================================================== */
.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0; }

/* page__header */
.page__header {
  width: 100%;
  height: 30rem;
  background: url("../img/balcony-sunset--darkened.jpg");
  background-size: 100% auto;
  background-repeat: no-repeat; }
  @media (max-width: 35em) {
    .page__header {
      background-size: cover; } }

.page__header:before {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 4rem;
  background: #fff;
  background: rgba(255, 255, 255, 0.95);
  content: '';
  z-index: 10; }
  @media (max-width: 35em) {
    .page__header:before {
      height: 6rem; } }

.page__header--wrapper {
  position: relative;
  z-index: 20;
  height: 4rem;
  max-width: 48rem;
  margin: 0 auto; }
  @media (max-width: 35em) {
    .page__header--wrapper {
      height: 6rem; } }

.page__header__title,
.page__header__nav {
  width: 50%;
  float: left; }
  @media (max-width: 35em) {
    .page__header__title,
    .page__header__nav {
      float: none;
      width: 100%;
      text-align: center; } }

.page__header__title {
  font-family: "Calluna-Sans", "Calibri", Arial, sans-serif;
  text-decoration: none;
  margin-top: 0.25rem; }
  .page__header__title h1 {
    margin: 0;
    font-size: 2rem;
    font-weight: normal; }
  .page__header__title h2 {
    margin: 0 0 0 0;
    display: none;
    font-weight: normal; }

.page__header__nav {
  font-family: "Calluna-Sans", "Calibri", Arial, sans-serif;
  text-align: right; }
  @media (max-width: 35em) {
    .page__header__nav {
      text-align: center; } }
  .page__header__nav > ul {
    margin: 1rem 0 0 0;
    padding: 0;
    list-style: none; }
    @media (max-width: 35em) {
      .page__header__nav > ul {
        margin: 0; } }
  .page__header__nav li {
    display: inline-block;
    vertical-align: top; }
    .page__header__nav li > a {
      text-decoration: none;
      padding: 0.4rem;
      margin-left: 0.15rem; }
      @media (max-width: 35em) {
        .page__header__nav li > a {
          padding: 0.2rem;
          margin-left: 0; } }

.page__header__action {
  position: relative;
  top: 3rem;
  margin: 0 auto 0 auto;
  text-align: center;
  color: white;
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15); }
  .page__header__action h2 {
    font-size: 3rem; }
    @media (max-width: 70em) {
      .page__header__action h2 {
        font-size: 2rem; } }
    @media (max-width: 45em) {
      .page__header__action h2 {
        font-size: 1.5rem; } }
  .page__header__action h2,
  .page__header__action p {
    margin: 0 0 1.5rem 0; }
  .page__header__action hr {
    margin: 0 auto 3rem auto;
    width: 35rem;
    max-width: 80%;
    border-top: thin solid rgba(255, 255, 255, 0.5); }

/* page__main */
.page__main {
  max-width: 48rem;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: -4rem auto 2rem auto;
  padding: 2rem;
  background: #fff; }
  .page__main h1 {
    text-align: center; }
  .page__main h2,
  .page__main h3 {
    margin: 2rem 0 1.5rem 0;
    padding-bottom: 0.5rem;
    text-align: center;
    border-bottom: thin solid #cccccc; }
  .page__main ol,
  .page__main ul {
    padding: 0 0 0 1.25rem; }
    .page__main ol > li,
    .page__main ul > li {
      margin: 0.25rem 0 0.25rem 0; }
  .page__main img {
    -webkit-animation: fadeIn 500ms ease-in-out;
    animation: fadeIn 500ms ease-in-out;
    position: relative;
    left: -2rem;
    width: 48rem;
    max-width: 48rem;
    height: auto;
    margin: 1rem 0; }
    @media (max-width: 70em) {
      .page__main img {
        max-width: 100%;
        width: 100%;
        left: 0; } }

.involvement ul {
  padding: 0;
  list-style: none;
  text-align: justify;
  font-size: 0.1px; }
  .involvement ul:after {
    content: '';
    display: inline-block;
    width: 100%; }
  .involvement ul > li {
    display: inline-block;
    vertical-align: top;
    width: 31%;
    margin-bottom: 1rem;
    padding: 0.5rem;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    border: thin solid #DDD; }
    @media (max-width: 70em) {
      .involvement ul > li {
        width: 48%; } }
    @media (max-width: 35em) {
      .involvement ul > li {
        width: 100%; } }
    .involvement ul > li a {
      display: block;
      position: relative;
      width: 100%; }
      .involvement ul > li a:before {
        content: '';
        display: block;
        margin-top: 100%; }
    .involvement ul > li img {
      -webkit-transition: all 250ms linear;
      -o-transition: all 250ms linear;
      transition: all 250ms linear;
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      max-width: 100%;
      margin-top: -100%;
      -webkit-filter: grayscale(100%);
      filter: grayscale(100%); }
      .involvement ul > li img:hover {
        -webkit-filter: grayscale(0%);
        filter: grayscale(0%); }
    .involvement ul > li h3 {
      font-size: 1.25rem;
      margin: 0;
      padding: 0.5rem 0 0 0;
      border-bottom: none;
      height: 3rem;
      line-height: 1; }

.posts__list,
.posts__pagination {
  list-style: none; }

.post__time {
  display: block;
  text-align: center;
  color: #666; }
/* ... */

